crdroid: Initial transparency adaptation
Change-Id: I3deb4689e203c671f23d570797321e7699e272d9
Signed-off-by: Pranav Vashi <neobuddy89@gmail.com>

--- a/res/xml/crdroid_settings_misc.xml
+++ b/res/xml/crdroid_settings_misc.xml
@@ -33,4 +33,9 @@
             android:title="@string/headset_connect_player_title"
             android:summary="@string/headset_connect_player_summary"
             android:defaultValue="false" />
+
+	<PreferenceScreen
+                android:key="transparency_settings"
+                android:title="@string/transparency_title"
+		android:fragment="com.crdroid.settings.fragments.Transparency" />
 </PreferenceScreen>
