--- a/res/values/crdroid_strings.xml
+++ b/res/values/crdroid_strings.xml
@@ -15,16 +15,15 @@
     <string name="sound_title">Sound</string>
     <string name="statusbar_title">Status bar</string>
 
-    <!-- Color picker -->
+    <!-- Color Picker -->
     <string name="dialog_color_picker">Color Picker</string>
-    <string name="press_color_to_apply">Press on Color to apply</string>
+    <string name="press_color_to_apply">Press on color below to apply</string>
+    <string name="arrow_right" translatable="false">→</string>
+    <string name="arrow_down" translatable="false">↓</string>
     <string name="hex">Hex:</string>
-    <string name="hex_hint" translatable="false">#FFDDDDDD</string>
-    <string name="hex_check_button_text">PREVIEW</string>
-    <string name="hex_reset_button_text">RESET</string>
-    <string name="color_right_arrow" translatable="false">"→"</string>
-    <string name="color_down_arrow" translatable="false">"↓"</string>
-    <string name="longpress_info">Longpress box to save color</string>
+    <string name="hex_hint">#ff000000</string>
+    <string name="set">Set</string>
+    <string name="color_default">Default</string>
 
     <!-- General strings -->
     <string name="ok">OK</string>
@@ -135,4 +134,38 @@
     <!-- Music Player -->
     <string name="headset_connect_player_title">Auto-start music player</string>
     <string name="headset_connect_player_summary">Launch default music player when headset is connected</string>
+
+    <!-- Transparency -->
+    <string name="transparency_title">Transparency</string>
+    <string name="qs_transparent_shade">QS shade transparency</string>
+    <string name="qs_transparent_header">QS header transparency</string>
+    <string name="volume_dialog_transparency">Volume dialog transparency</string>
+    <string name="power_menu_transparency">Power/reboot menu transparency</string>
+    <string name="power_menu_dialog_dim">Power/reboot dialog dim background amount</string>
+    <string name="notifications_transparency">Notifications transparency</string>
+    <string name="qs">Quick Settings Tweaks</string>
+    <string name="vol_diag">Volume Dialog Tweaks</string>
+    <string name="power">Power Menu Tweaks</string>
+
+    <!-- QS stroke settings -->
+    <string name="qs_stroke_title">QS shade stroke</string>
+    <string name="qs_stroke_disabled">Disabled</string>
+    <string name="qs_stroke_accent">Accent color</string>
+    <string name="qs_stroke_custom">Custom color</string>
+    <string name="qs_stroke_color_title">QS shade stroke color</string>
+    <string name="qs_stroke_thickness_title">QS shade stroke thickness</string>
+    <string name="qs_corner_radius_title">QS shade corner radius</string>
+    <string name="qs_dash_width_title">QS stroke dash width</string>
+    <string name="qs_dash_gap_title">QS stroke dash gap</string>
+
+    <!-- Volume dialog stroke settings -->
+    <string name="volume_dialog_stroke_title">Volume dialog stroke</string>
+    <string name="volume_dialog_stroke_disabled">Disabled</string>
+    <string name="volume_dialog_stroke_accent">Accent color</string>
+    <string name="volume_dialog_stroke_custom">Custom color</string>
+    <string name="volume_dialog_stroke_color_title">Volume dialog stroke color</string>
+    <string name="volume_dialog_stroke_thickness_title">Volume dialog stroke thickness</string>
+    <string name="volume_dialog_corner_radius_title">Volume dialog corner radius</string>
+    <string name="volume_dialog_dash_width_title">Volume dialog stroke dash width</string>
+    <string name="volume_dialog_dash_gap_title">Volume dialog stroke dash gap</string>
 </resources>
