--- a/res/values/cr_strings.xml
+++ b/res/values/cr_strings.xml
@@ -25,7 +25,6 @@
     <string name="gestures_title">Gestures</string>
     <string name="lockscreen_title">Lock Screen</string>
     <string name="misc_title">Miscellaneous</string>
-    <string name="navbar_title">Navigation</string>
     <string name="notifications_title">Notifications</string>
     <string name="powermenu_title">Power Menu</string>
     <string name="quicksettings_title">Quick Settings</string>
@@ -330,38 +329,41 @@
     <string name="show_title">Show</string>
     <string name="reset_paranoid">Paranoid</string>
     <string name="reset_android">Android</string>
+    <string name="on">On</string>
+    <string name="off">Off</string>
+    <string name="yes">@android:string/yes</string>
+    <string name="no">@android:string/no</string>
 
-    <!-- Navigation Bar -->
+    <string name="navbar_title">Navigation bar</string>
+    <string name="navbar_summary">Smartbar/Fling</string>
+
+    <!-- DUI -->
     <string name="navbar_interface_title">Interface</string>
     <string name="navbar_size">Bar size</string>
     <string name="navbar_mode">Navigation mode</string>
-    <string name="navbar_mode_summary">Select to enable either smartbar or fling</string>
-    <string name="navbar_visibility">Navigation bar</string>
-    <string name="navbar_visibility_summary">Toggle navigation bar visibility</string>
+    <string name="navbar_mode_summary">Select which navigation mode to use on your device</string>
+    <string name="navbar_visibility">Allow navigation bar</string>
     <string name="navigationbar_settings_title">Navigation bar</string>
     <string name="navigationbar_settings_summary">Customize navigation style and behavior</string>
-    <string name="navbar_general_title">Other settings</string>
+    <string name="navbar_general_title">Advanced</string>
     <string name="navigation_bar_left_title">Left-handed mode</string>
     <string name="navigation_bar_left_summary">Place the navigation bar on the left side of the screen in landscape mode</string>
-    <string name="info_pref_note_title">Note</string>
     <string name="smartbar_interface">SmartBar</string>
     <string name="icon_pack_picker_dialog_title">Icon packs</string>
+    <string name="image_exceeds_max_allowed_size">Image must not exceed 512x512</string>
     <string name="invalid_icon_from_uri">Unable to load image from content provider</string>
     <string name="picker_activities">Activities</string>
     <string name="select_custom_app_title">Select custom app</string>
     <string name="select_custom_activity_title">Select custom activity</string>
     <string name="profile_applist_title">Applications</string>
-    <string name="smartbar_doubletap_sleep_title">Tap to sleep</string>
-    <string name="smartbar_doubletap_sleep_summary">Double-tap on the navbar empty areas to put device asleep</string>
-    <string name="one_handed_mode_title">One handed mode</string>
-    <string name="one_handed_mode_summary">Allows swiping on the navigation bar to enable one handed mode</string>
+    <string name="default_settings">Default settings</string>
+    <string name="default_settings_summary">Stock AOSP navigation bar</string>
 
     <!-- Actions dialog and default task values set in ActionPreference xml-->
     <string name="choose_action_title">Choose action</string>
     <string name="action_entry_default_action">Default settings</string>
     <string name="action_entry_select_app">Select application</string>
     <string name="action_entry_custom_action">Select custom action</string>
-
     <string name="action_value_default_action" translatable="false">default</string>
     <string name="action_value_select_app" translatable="false">app</string>
     <string name="action_value_custom_action" translatable="false">custom</string>
@@ -374,11 +376,11 @@
 
     <!-- Fling -->
     <string name="fling_settings">Fling settings</string>
-    <string name="fling_settings_summary">Customize fling gestures</string>
+    <string name="fling_settings_summary">A very unique and fully-customizable gesture-based navigation bar</string>
     <string name="fling_interface">Fling</string>
     <string name="fling_enable_title">Enable Fling</string>
-    <string name="fling_back_home_policy">Back and Home are required to be set at all times. To change a Back or Home assignment, set the desired assignment first</string>
-    <string name="fling_split_bar_policy">When only a right or left action is assigned, the action applies to the full bar</string>
+    <string name="fling_back_home_policy">Back and Home are required to be set at all times. To change a Back or Home assignment, set the desired assignment first.\n\nAlso, setting a double tap action will delay single tap a bit.</string>
+    <string name="fling_split_bar_policy">When only a right or left action is assigned, the action applies to the full bar.</string>
     <string name="fling_def_summary">No action set</string>
     <string name="fling_swipe_actions">Swipe gestures</string>
     <string name="fling_tap_actions">Tap gestures</string>
@@ -427,13 +429,15 @@
     <string name="fling_longpress_timeout_label_right">More delay</string>
     <string name="fling_longpress_title">Long press delay</string>
     <string name="fling_longpress_summary">Increase or decrease the time it takes to execute a long press</string>
+    <string name="fling_keyboard_cursors_title">Dynamic keyboard cursors action</string>
+    <string name="fling_keyboard_cursors_summary">Double tap left and right actions becomes left and right keyboard cursor actions if keyboard is open</string>
+    <string name="fling_logo_opacity_title">Fling logo opacity</string>
 
     <!-- Pulse navigation bar music visualizer -->
-    <string name="pulse_help_policy_notice_title">About Pulse</string>
-    <string name="pulse_help_policy_notice_summary">Pulse is a brilliant audio graphic equalizer on the navigation bar when music plays. Pulse does not work with some audio sources when listening on device speaker</string>
+    <string name="pulse_help_policy_notice_summary">Pulse does not work with some audio sources when listening on device speaker</string>
     <string name="pulse_settings">Pulse</string>
     <string name="pulse_settings_summary">Navigation bar audio graphic equalizer</string>
-    <string name="fling_show_pulse_title">Show Pulse</string>
+    <string name="fling_show_pulse_title">Allow Pulse</string>
     <string name="fling_show_pulse_summary">Audio graphic equalizer on the navigation bar</string>
     <string name="pulse_render_mode_title">Render mode</string>
     <string name="pulse_render_mode_fading_bars">Fading blocks</string>
@@ -446,10 +450,9 @@
     <string name="pulse_custom_fudge_factor">Sanity level</string>
     <string name="lavamp_solid_speed_title">Lava Lamp speed</string>
     <string name="pulse_solid_units_count">Solid lines count</string>
+    <string name="pulse_solid_lines_count">Solid lines count</string>
     <string name="pulse_solid_units_opacity">Solid lines opacity</string>
     <string name="pulse_solid_dimen_category">Solid lines mode settings</string>
-    <string name="fling_lavalamp_color_from">Lava Lamp start color</string>
-    <string name="fling_lavalamp_color_to">Lava Lamp end color</string>
     <string name="pulse_custom_buttons_opacity_title">Smartbar buttons opacity on Pulse</string>
 
     <!-- Pulse config -->
@@ -468,9 +471,10 @@
     <!-- SmartBar -->
     <string name="smartbar_category">Smartbar</string>
     <string name="smartbar_settings_title">Smartbar settings</string>
-    <string name="smartbar_settings_summary">Customize various smartbar elements</string>
-    <string name="smartbar_editor_title">Toggle button editor</string>
-    <string name="smartbar_editor_summary">Medium press and drag to change position. Long press to show edit menu. Button position may be changed while menu is showing.</string>
+    <string name="smartbar_settings_summary">Fully-customizable navigation bar</string>
+    <string name="smartbar_editor_title">Start edit mode</string>
+    <string name="smartbar_editor_summary">Open smartbar buttons editor</string>
+    <string name="smartbar_help_policy_notice_summary">When in editor mode, medium press and drag a button to change its position or long press a button to show the edit menu. Button position may be changed while menu is showing.\n\nSetting a double tap action will delay single tap a bit.</string>
     <string name="smartbar_context_menu_position_title">Context buttons layout position</string>
     <string name="smartbar_context_menu_position_summary">Set the position of contextual buttons such as menu and ime selector</string>
     <string name="smartbar_right">Right</string>
@@ -482,6 +486,7 @@
     <string name="smartbar_button_animation_flip">Flip</string>
     <string name="smartbar_button_animation_pixel">Pixel (all buttons)</string>
     <string name="smartbar_button_animation_pixel_home">Pixel (Home button only)</string>
+    <string name="smartbar_button_animation_pixel_home_ripple">Pixel (Home button only) and Ripple</string>
     <string name="smartbar_factory_reset_title">Reset to stock</string>
     <string name="smartbar_factory_reset_confirm">Are you sure you want to reset Smartbar to stock settings?</string>
     <string name="smartbar_ime_action_title">Input method and media actions</string>
@@ -506,6 +511,15 @@
     <string name="smartbar_longpress_delay_normal">Normal delay</string>
     <string name="smartbar_longpress_delay_long">Long delay</string>
     <string name="smartbar_custom_icon_size_title">Custom icon scaling</string>
+    <string name="one_handed_mode_title">One handed mode</string>
+    <string name="one_handed_mode_summary">Allows swiping on the navigation bar to enable one handed mode</string>
+
+    <!-- Bottom navigation -->
+    <string name="bottom_nav_system_title">System</string>
+    <string name="bottom_nav_lockscreen_title">Lockscreen</string>
+    <string name="bottom_nav_statusbar_title">Statusbar</string>
+    <string name="bottom_nav_navigation_title">Navigation</string>
+    <string name="bottom_nav_multitasking_title">Multitasking</string>
 
     <!-- Allow fake signature -->
     <string name="allow_signature_fake">Allow signature spoofing</string>
