--- a/res/xml/crdroid_settings_navigation.xml
+++ b/res/xml/crdroid_settings_navigation.xml
@@ -46,12 +46,12 @@
             android:defaultValue="true" />
     </PreferenceCategory>
 
-    <!--<Preference
+   <!--<Preference
         android:key="pie_settings"
         android:icon="@drawable/ic_pie"
         android:title="@string/pie_settings"
         android:summary="@string/pie_settings_summary"
-        android:fragment="com.crdroid.settings.fragments.PieSettings" />
+        android:fragment="com.crdroid.settings.fragments.PieSettings" />-->
 
     <PreferenceCategory
         android:key="category_navbar_interface"
@@ -120,7 +120,7 @@
             android:title="@string/pulse_settings"
             android:summary="@string/pulse_settings_summary"
             android:fragment="com.crdroid.settings.fragments.PulseSettings" />
-    </PreferenceCategory>-->
+    </PreferenceCategory>
 
     <PreferenceScreen
         android:title=""
